--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html>
-<head>
-<meta charset="utf-8">
-<title>Speedtest</title>
-</head>
-<body>
-<iframe width="100%" height="650px" frameborder="0" src="https://galaxy-studio.speedtestcustom.com"></iframe>
-</body>
+	<head>
+		<meta charset="utf-8">
+		<title>
+			Speedtest
+		</title>
+	</head>
+	<body>
+		<div class="container">
+			<iframe width="100%" height="100%" frameborder="0" src="https://galaxy-studio.speedtestcustom.com"></iframe>
+		</div>
+	</body>
 </html>
