--- a/index.html
+++ b/index.html
@@ -2,9 +2,21 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>
-			Speedtest
-		</title>
+		<title>Speedtest</title>
+		<style>
+			* {
+			margin:0;
+			padding:0;
+			}
+			html,body {
+				width:100%;
+				height:100%;
+			}
+			.container {
+				width:100%;
+				height:100%;
+			}
+    		</style>
 	</head>
 	<body>
 		<div class="container">
